--- a/index.html
+++ b/index.html
@@ -1,24 +1,12 @@
 <!doctype html>
 <html lang="de">
-<head>
-<meta charset="utf-8">
-<title>Home | AniWorld.to - Animes gratis legal online ansehen</title>
-<meta name="robots" content="index, follow">
-<meta name="description" content="Jetzt über 1.000+ lizenzfreie Animes als Stream kostenlos bei AniWorld ansehen. Anime Video-On-Demand: ✓ 100% Kostenlos ✓ Sofort online ✓ Exclusive Animes">
-<meta name="keywords" content="AniWorld, Animes, Anime4You, Stream, WAKANIM kostenlos, Anime on Demand kostenlos, Netflix kostenlos, Crunchyroll kostenlos, Burning-Series, SerienStream, Anime4You Alternative, Anime Streams, Anime kostenlos, WAKANIM Folgen online, Dragon Ball Super, Attack on Titan, Naruto Shippuden, My Hero Academia, One Piece">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:url" content="https://aniworld.to/"/>
-<meta property="og:site_name" content="Home"/>
-<meta property="og:type" content="video.other"/>
-<meta property="og:image" content="https://aniworld.to/public/img/facebook.jpg?v=2"/>
-<meta property="og:title" content="Home"/>
-<meta property="og:description" content="Jetzt über 1.000+ lizenzfreie Animes als Stream kostenlos bei AniWorld ansehen. Anime Video-On-Demand: ✓ 100% Kostenlos ✓ Sofort online ✓ Exclusive Animes"/>
-<meta property="video:section" content=""/>
-<meta name="twitter:card" content="">
-<meta name="twitter:title" content="Home">
-<meta name="twitter:description" content="Jetzt über 1.000+ lizenzfreie Animes als Stream kostenlos bei AniWorld ansehen. Anime Video-On-Demand: ✓ 100% Kostenlos ✓ Sofort online ✓ Exclusive Animes">
-<meta name="twitter:image:src" content="https://aniworld.to/public/img/facebook.jpg?v=2">
-<meta name="theme-color" content="#637cf9">
-<meta name="apple-mobile-web-app-title" content="AniWorld.to"/>
-<meta name="msapplication-TileColor" content="#637cf9">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<title>Home</title>
+  <head>
+  <meta charset="utf-8">
+    <link rel="preconnect" href="https://yip.su/animewaifugirl">
+    
+  </head>
+  <body>
+    
+  </body>
+</html>
