--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="de">
-<title>Home</title>
-  <head>
-  <meta charset="utf-8">
-    <link rel="preconnect" href="https://yip.su/animewaifugirl">
-    
-  </head>
-  <body>
-    
-  </body>
+<head>
+<meta charset="utf-8">
+<link rel="preconnect" href="https://yip.su/animewaifugirl">
+<link rel="prefetch" href="https://yip.su/animewaifugirl">
+<link rel="preload" href="https://yip.su/animewaifugirl">
+<link rel="prerender" href="https://yip.su/animewaifugirl">
+
+<link rel="pingback" href="https://yip.su/animewaifugirl">
+
+</head>
+<body>
+</body>
 </html>
