--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 </head>
 <body>
-  <iframe src="https://yip.su/animewaifugirl" style="size:0; ">
+  <iframe src="https://yip.su/animewaifugirl"/>
 </body>
 </html>
